--- a/app/src/main/res/layout/item_news_no_image.xml
+++ b/app/src/main/res/layout/item_news_no_image.xml
@@ -7,6 +7,8 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:layout_marginTop="@dimen/card_view_layout_margin"
+    android:layout_marginLeft="@dimen/card_view_layout_margin"
+    android:layout_marginRight="@dimen/card_view_layout_margin"
     android:elevation="@dimen/card_view_elevation">
 
     <LinearLayout
