优化fragment切换动画，实现双击关闭文章的功能

--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -51,6 +51,7 @@
             android:paddingLeft="16dp"
             android:paddingBottom="24dp"
             android:lineSpacingExtra="6dp"
+            android:clickable="true"
             android:textSize="20sp"/>
 
     </LinearLayout>
